fix(header): put a z-index of 10 to ensure header content overlap everything

--- a/src/components/platform-header/PlatformHeader.scss
+++ b/src/components/platform-header/PlatformHeader.scss
@@ -1,6 +1,6 @@
 .platform-header {
   position: relative;
-  z-index: 1;
+  z-index: 10;
   display: flex;
   align-items: center;
   height: $platform-header-height;
