--- a/src/components/side-panel/SidePanel.scss
+++ b/src/components/side-panel/SidePanel.scss
@@ -2,7 +2,7 @@
   $title-height: 44px;
 
   position: fixed;
-  z-index: 2;
+  z-index: 20;
   top: 0;
   right: 0;
   width: 400px;
